--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native-stack": "^7.2.0",
     "expo": "~52.0.27",
     "expo-checkbox": "~4.0.1",
+    "expo-image-picker": "^16.0.4",
     "expo-splash-screen": "^0.29.21",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.2.0",
