--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@react-navigation/native-stack": "^7.2.0",
     "expo": "~52.0.27",
     "expo-checkbox": "~4.0.1",
+    "expo-file-system": "^18.0.9",
     "expo-image-picker": "^16.0.4",
+    "expo-media-library": "^17.0.5",
+    "expo-sharing": "^13.0.1",
     "expo-splash-screen": "^0.29.21",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.2.0",
